--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>AJZ Storybook</title>
   <meta name="description" content="AJZ Storybook — Essays, notes, and wanderings">
   <link rel="stylesheet" href="styles.css">
-  <link rel="alternate" type="application/rss+xml" title="AJZ Storybook RSS" href="/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="AJZ Storybook RSS" href="rss.xml">
 </head>
 <body>
   <header class="header">
