Restore original SVG avatar placeholder

--- a/post.html
+++ b/post.html
@@ -31,7 +31,7 @@
       <p class="kicker">Essay</p>
       <h1>Sample Post Title You Can Replace</h1>
       <div class="byline">
-        <img src="assets/avatar.jpg" alt="" width="28" height="28" style="border-radius:999px;border:1px solid var(--border)">
+        <img src="assets/avatar-placeholder.svg" alt="" width="28" height="28" style="border-radius:999px;border:1px solid var(--border)">
         <span>By Ajay • Sep 28, 2025 • 3 min read</span>
       </div>
       <figure style="margin:16px 0">
