Add placeholder2.jpg from IMG_7754.heic and update image references

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <article class="card">
         <a href="post.html">
-          <img src="assets/placeholder.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
+          <img src="assets/placeholder2.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
           <h2>Field Journal: Wandering with Max & Ruby</h2>
         </a>
         <div class="meta">Sep 12, 2025 · 5 min read · <span class="badge">Journal</span></div>
