--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
         <span>By Ajay • Sep 28, 2025 • 3 min read</span>
       </div>
       <figure style="margin:16px 0">
-        <img src="assets/placeholder.jpg" alt="cover placeholder">
+        <img src="assets/placeholder2.jpg" alt="cover placeholder">
         <figcaption>Replace with your photo later.</figcaption>
       </figure>
       <p>Use this page as a template for your posts. Keep paragraphs short, add sub‑heads for breath, and lead with a vivid image when it helps the story.</p>
