update about and index page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hero">
       <span class="kicker">Welcome</span>
       <h1>Writing, travel notes, and experiments</h1>
-      <p>Minimal, clean, fast. Drop your photos later — placeholders below.</p>
+      <p>Knowledge is the virtue, share and grow.</p>
     </section>
 
     <section class="grid">
