Clean up about.html - remove redundancies and corrupted content

--- a/about.html
+++ b/about.html
@@ -1,54 +1,104 @@
-<!doctype html><!doctype html>
+<!doctype html><!doctype html><!doctype html>
 
-<html lang="en"><html lang="e        <h1>About</h1>
+<html lang="en">
 
-<head>    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
+<head><html lang="en"><html lang="e        <h1>About</h1>
 
-  <meta charset="utf-8">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
+  <meta charset="utf-8">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><head>    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
 
-  <title>About — AJZ Storybook</title>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>>About</h1>
+  <title>About — AJZ Storybook</title>
 
-  <meta name="description" content="About AJZ Storybook">    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
+  <meta name="description" content="About AJZ Storybook">  <meta charset="utf-8">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
 
-  <link rel="stylesheet" href="styles.css">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
+  <link rel="stylesheet" href="styles.css">
 
-</head>    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
+</head>  <meta name="viewport" content="width=device-width, initial-scale=1">    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
 
-<body>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
+<body>
 
-  <header class="header"><head>
+  <header class="header">  <title>About — AJZ Storybook</title>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>>About</h1>
 
-    <div class="container nav">  <meta charset="utf-8">
+    <div class="container nav">
 
-      <div class="brand">  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <div class="brand">  <meta name="description" content="About AJZ Storybook">    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
 
-        <div class="logo"></div>  <title>About — AJZ Storybook</title>
+        <div class="logo"></div>
 
-        <div>  <meta name="description" content="About AJZ Storybook">
+        <div>  <link rel="stylesheet" href="styles.css">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
 
-          <div class="title">AJZ Storybook</div>  <link rel="stylesheet" href="styles.css">
+          <div class="title">AJZ Storybook</div>
 
-          <div class="tagline">Essays, notes, and wanderings</div></head>
+          <div class="tagline">Essays, notes, and wanderings</div></head>    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
 
-        </div><body>
+        </div>
 
-      </div>  <header class="header">
+      </div><body>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
 
-      <nav class="menu">    <div class="container nav">
+      <nav class="menu">
 
-        <a href="index.html">Home</a>      <div class="brand">
+        <a href="index.html">Home</a>  <header class="header"><head>
+
+        <a class="active" href="about.html">About</a>
+
+        <a href="archive.html">Archive</a>    <div class="container nav">  <meta charset="utf-8">
+
+        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>
+
+      </nav>      <div class="brand">  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    </div>
+
+  </header>        <div class="logo"></div>  <title>About — AJZ Storybook</title>
+
+
+
+  <main class="container prose">        <div>  <meta name="description" content="About AJZ Storybook">
+
+    <h1>About</h1>
+
+    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>          <div class="title">AJZ Storybook</div>  <link rel="stylesheet" href="styles.css">
+
+    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
+
+    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>          <div class="tagline">Essays, notes, and wanderings</div></head>
+
+    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
+
+            </div><body>
+
+    <h2>Colophon</h2>
+
+    <ul>      </div>  <header class="header">
+
+      <li>Static HTML/CSS with a dash of vanilla JS</li>
+
+      <li>System fonts for speed; serif body with generous line height</li>      <nav class="menu">    <div class="container nav">
+
+      <li>Responsive layout with cards and a focus on readability</li>
+
+    </ul>        <a href="index.html">Home</a>      <div class="brand">
+
+  </main>
 
         <a class="active" href="about.html">About</a>        <div class="logo"></div>
 
-        <a href="archive.html">Archive</a>        <div>
+  <footer class="footer">
 
-        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>          <div class="title">AJZ Storybook</div>
+    <div class="container">        <a href="archive.html">Archive</a>        <div>
 
-      </nav>          <div class="tagline">Learn, explore, and enjoy</div>
+      © <span data-year></span> AJZ Storybook.
 
-    </div>        </div>
+    </div>        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>          <div class="title">AJZ Storybook</div>
+
+  </footer>
+
+  <script src="script.js"></script>      </nav>          <div class="tagline">Learn, explore, and enjoy</div>
+
+</body>
+
+</html>    </div>        </div>
 
   </header>      </div>
 
