Create clean about.html from scratch with personal bio

--- a/about.html
+++ b/about.html
@@ -1,152 +1,47 @@
-<!doctype html><!doctype html><!doctype html>
-
+<!doctype html>
 <html lang="en">
-
-<head><html lang="en"><html lang="e        <h1>About</h1>
-
+<head>
   <meta charset="utf-8">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1"><head>    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About — AJZ Storybook</title>
-
-  <meta name="description" content="About AJZ Storybook">  <meta charset="utf-8">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
-
+  <meta name="description" content="About AJZ Storybook">
   <link rel="stylesheet" href="styles.css">
-
-</head>  <meta name="viewport" content="width=device-width, initial-scale=1">    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
-
+</head>
 <body>
-
-  <header class="header">  <title>About — AJZ Storybook</title>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>>About</h1>
-
+  <header class="header">
     <div class="container nav">
-
-      <div class="brand">  <meta name="description" content="About AJZ Storybook">    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
-
+      <div class="brand">
         <div class="logo"></div>
-
-        <div>  <link rel="stylesheet" href="styles.css">    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
-
+        <div>
           <div class="title">AJZ Storybook</div>
-
-          <div class="tagline">Essays, notes, and wanderings</div></head>    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
-
+          <div class="tagline">Essays, notes, and wanderings</div>
         </div>
-
-      </div><body>    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
-
+      </div>
       <nav class="menu">
-
-        <a href="index.html">Home</a>  <header class="header"><head>
-
+        <a href="index.html">Home</a>
         <a class="active" href="about.html">About</a>
-
-        <a href="archive.html">Archive</a>    <div class="container nav">  <meta charset="utf-8">
-
+        <a href="archive.html">Archive</a>
         <a href="mailto:hello@ajz-storybook.com">Subscribe</a>
-
-      </nav>      <div class="brand">  <meta name="viewport" content="width=device-width, initial-scale=1">
-
+      </nav>
     </div>
+  </header>
 
-  </header>        <div class="logo"></div>  <title>About — AJZ Storybook</title>
-
-
-
-  <main class="container prose">        <div>  <meta name="description" content="About AJZ Storybook">
-
+  <main class="container prose">
     <h1>About</h1>
-
-    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>          <div class="title">AJZ Storybook</div>  <link rel="stylesheet" href="styles.css">
-
+    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
     <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
-
-    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>          <div class="tagline">Essays, notes, and wanderings</div></head>
-
+    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
     <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
-
-            </div><body>
-
     <h2>Colophon</h2>
-
-    <ul>      </div>  <header class="header">
-
+    <ul>
       <li>Static HTML/CSS with a dash of vanilla JS</li>
-
-      <li>System fonts for speed; serif body with generous line height</li>      <nav class="menu">    <div class="container nav">
-
+      <li>System fonts for speed; serif body with generous line height</li>
       <li>Responsive layout with cards and a focus on readability</li>
-
-    </ul>        <a href="index.html">Home</a>      <div class="brand">
-
+    </ul>
   </main>
 
-        <a class="active" href="about.html">About</a>        <div class="logo"></div>
-
   <footer class="footer">
-
-    <div class="container">        <a href="archive.html">Archive</a>        <div>
-
-      © <span data-year></span> AJZ Storybook.
-
-    </div>        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>          <div class="title">AJZ Storybook</div>
-
-  </footer>
-
-  <script src="script.js"></script>      </nav>          <div class="tagline">Learn, explore, and enjoy</div>
-
-</body>
-
-</html>    </div>        </div>
-
-  </header>      </div>
-
-      <nav class="menu">
-
-  <main class="container prose">        <a href="index.html">Home</a>
-
-    <h1>About</h1>        <a class="active" href="about.html">About</a>
-
-    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>        <a href="archive.html">Archive</a>
-
-    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>
-
-    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>      </nav>
-
-    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>    </div>
-
-    <h2>Colophon</h2>  </header>
-
-    <ul>
-
-      <li>Static HTML/CSS with a dash of vanilla JS</li>  <main class="container prose">
-
-      <li>System fonts for speed; serif body with generous line height</li>    <h1>About</h1>
-
-      <li>Responsive layout with cards and a focus on readability</li>    <p><strong>AJZ Storybook</strong> is a simple, typography‑first website for essays, notes, and photos. It’s built as plain HTML/CSS so it loads fast and is easy to deploy anywhere.</p>
-
-    </ul>    <p>Replace this text with your bio: finance & data science, neuroscience interests, and the story behind the site name.</p>
-
-  </main>    <h2>Colophon</h2>
-
-    <ul>
-
-  <footer class="footer">      <li>Static HTML/CSS with a dash of vanilla JS</li>
-
-    <div class="container">      <li>System fonts for speed; serif body with generous line height</li>
-
-      © <span data-year></span> AJZ Storybook.      <li>Responsive layout with cards and a focus on readability</li>
-
-    </div>    </ul>
-
-  </footer>  </main>
-
-  <script src="script.js"></script>
-
-</body>  <footer class="footer">
-
-</html>    <div class="container">
+    <div class="container">
       © <span data-year></span> AJZ Storybook.
     </div>
   </footer>
