Major site update: personalize content, optimize images, and enhance About page
- Update hero section with 'Knowledge is the virtue, share and grow' motto
- Replace hero tagline with learning experiments description
- Personalize all three article cards with meaningful content:
  * 'Blessed to be here' - mindful reflection post
  * 'Sound, let's understand how...' - science exploration post
  * Nature post about children's wonder with flowers
- Add optimized maxJ.jpg image (resized from 14MB to 94KB)
- Add profile.jpeg for About page
- Remove Colophon section from About page
- Add centered profile picture to About page
- Update post badges and descriptions to reflect actual content
- Optimize images for faster web loading while maintaining quality

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AJZ Storybook</title>
-  <meta name="description" content="AJZ Storybook — Essays, notes, and wanderings">
+  <meta name="description" content="AJZ Storybook — Essays, researches, and learnings">
   <link rel="stylesheet" href="styles.css">
   <link rel="alternate" type="application/rss+xml" title="AJZ Storybook RSS" href="rss.xml">
 </head>
@@ -30,35 +30,35 @@
   <main class="container">
     <section class="hero">
       <span class="kicker">Welcome</span>
-      <h1>Writing, travel notes, and experiments</h1>
-      <p>Knowledge is the virtue, share and grow.</p>
+      <h1>Knowledge is the virtue, share and grow.</h1>
+      <p>Experiments in learning: transforming math lessons with stories rather than numbers, exploring new topics that can be practiced and shared.</p>
     </section>
 
     <section class="grid">
       <article class="card">
         <a href="post.html">
           <img src="assets/placeholder.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
-          <h2>Sample Post Title You Can Replace</h2>
+          <h2>Blessed to be here</h2>
         </a>
-        <div class="meta">Sep 28, 2025 · 3 min read · <span class="badge">Essay</span></div>
-        <p>A short preface or standfirst to tease the post. Keep it to two lines for a tidy grid.</p>
+        <div class="meta">Sep 28, 2025 · 3 min read · <span class="badge">Reflection</span></div>
+        <p>While walking, pause, look up and aroundand experience your presence in this beautiful world of ours, all of us!</p>
       </article>
 
       <article class="card">
         <a href="post.html">
-          <h2>Another Post Without a Cover Image</h2>
+          <h2>Sound, let's understand how...</h2>
         </a>
-        <div class="meta">Sep 20, 2025 · 4 min read · <span class="badge">Notes</span></div>
-        <p>Not every story needs an image. This card shows the text‑only style.</p>
+        <div class="meta">Sep 20, 2025 · 4 min read · <span class="badge">Science</span></div>
+        <p>We delve into why we cannot hear what dogs can whilst dogs can't hear sounds we can hear? Let's deep dive into the fascinating world of frequency ranges and biological adaptation.</p>
       </article>
 
       <article class="card">
         <a href="post.html">
-          <img src="assets/placeholder2.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
+          <img src="assets/maxJ.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
           <h2>Field Journal: Wandering with Max & Ruby</h2>
         </a>
-        <div class="meta">Sep 12, 2025 · 5 min read · <span class="badge">Journal</span></div>
-        <p>A travelogue format with a hero photo at the top. Swap in your own images later.</p>
+        <div class="meta">Sep 12, 2025 · 5 min read · <span class="badge">Nature</span></div>
+        <p>Children see wonder in every petal, every color, every living thing. Nature teaches patience, curiosity, and connection—lessons no classroom can replicate. In their eyes, a simple flower becomes an entire universe of discovery.</p>
       </article>
     </section>
   </main>
