--- a/about.html
+++ b/about.html
@@ -32,12 +32,10 @@
     <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
     <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
     <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
-    <h2>Colophon</h2>
-    <ul>
-      <li>Static HTML/CSS with a dash of vanilla JS</li>
-      <li>System fonts for speed; serif body with generous line height</li>
-      <li>Responsive layout with cards and a focus on readability</li>
-    </ul>
+    
+    <div style="text-align: center; margin-top: 40px;">
+      <img src="assets/profile.jpeg" alt="Ajay Zhimire" style="width: 200px; height: 200px; border-radius: 50%; border: 3px solid var(--border); object-fit: cover;">
+    </div>
   </main>
 
   <footer class="footer">
