Update About page with personal bio and add GitHub Actions workflow
- Simplified About page content to more personal, engaging narrative
- Removed academic formality in favor of approachable tone
- Added GitHub Actions workflow for automated Pages deployment
- Updated VS Code workspace settings and extensions

--- a/about.html
+++ b/about.html
@@ -27,11 +27,10 @@
   </header>
 
   <main class="container prose">
-    <h1>About</h1>
-    <p>I'm Ajay Zhimire—a researcher, data architect, and educator passionate about bridging finance, data science, and neuroscience. I hold an MBA and a Master's in Data Science, and I am currently pursuing a PhD in Finance, where I explore the intersection of machine learning, asset pricing, and behavioral decision-making.</p>
-    <p>Professionally, I've spent nearly two decades at UnitedHealth Group, specializing in data architecture and cloud-enabled analytics, while my academic work focuses on questions such as: How does governance act as a priced risk factor? How do behavioral biases shape markets?</p>
-    <p>This site is a space to share research, essays, and resources—and eventually expand into math and science tutoring, mentorship, and educational projects as part of my philanthropic interests. Beyond finance and data, I enjoy exploring music, neuroscience, astronomy, and hands-on experiments that spark curiosity and inspire learning.</p>
-    <p>At my core, I'm a lifelong learner and a proud father of two, striving to be a role model who demonstrates that knowledge is not just studied—it's lived, shared, and applied.</p>
+    <h1>About Me</h1>
+    <p>I began my PhD as a hobby to stay engaged, and it soon grew into a passion for knowledge and self-learning. For me, learning is a way to keep pace with social and technological change while exploring what it means to be human.</p>
+    <p>I'm fascinated by the human mind—its choices, behaviors, and their impact across society and finance. Professionally, I work as a data architect, and outside of research I actively tutor high school students in math and science through outstanding non-profits.</p>
+    <p>This site is where I share that journey through essays, blogs, and reflections drawn from both lived and learned experiences.</p>
     
     <div style="text-align: center; margin-top: 40px;">
       <img src="assets/profile.jpeg" alt="Ajay Zhimire" style="width: 200px; height: 200px; border-radius: 50%; border: 3px solid var(--border); object-fit: cover;">
