Fix HTML corruption and configure ajayzhimire.app domain
🔧 Fixes:
- Restored clean HTML structure (DOCTYPE, meta tags)
- Fixed header corruption in index.html
- Created CNAME file with ajayzhimire.app
- Updated all domain references consistently

🌐 Domain Configuration:
- Email addresses: hello@ajayzhimire.app
- Footer links: ajayzhimire.app
- All content intact: Thought of Day, Jane Goodall tribute, enhanced articles

--- a/archive.html
+++ b/archive.html
@@ -21,7 +21,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a class="active" href="archive.html">Archive</a>
-        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>
+        <a href="mailto:hello@ajayzhimire.app">Subscribe</a>
       </nav>
     </div>
   </header>
