--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="archive.html">Archive</a>
-        <a href="mailto:hello@ajz-storybook.com">Subscribe</a>
+        <a href="mailto:hello@ajayzhimire.app">Subscribe</a>
       </nav>
     </div>
   </header>
@@ -175,7 +175,7 @@
 
   <footer class="footer">
     <div class="container">
-      © <span data-year></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajz-storybook.com">ajz-storybook.com</a>
+      © <span data-year></span> AJZ Storybook. Built as a lightweight static site. <a href="https://ajayzhimire.app">ajayzhimire.app</a>
     </div>
   </footer>
 
