Make all article images consistent size (200px height)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="grid">
       <article class="card">
         <a href="post.html">
-          <img src="assets/placeholder.jpg" alt="placeholder cover" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
+          <img src="assets/placeholder.jpg" alt="placeholder cover">
           <h2>Blessed to be here</h2>
         </a>
         <div class="meta">Sep 28, 2025 · 3 min read · <span class="badge">Reflection</span></div>
@@ -56,7 +56,7 @@
       </article>
 
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=800&h=400&fit=crop&crop=center" alt="Sound waves and music" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
+        <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=800&h=400&fit=crop&crop=center" alt="Sound waves and music">
         <h2>Sound & Frequency — The Basics for Young Scientists</h2>
         <div class="meta">Sep 20, 2025 · 3 min read · <span class="badge">Science</span></div>
         <p>🎵 Why can't we hear what dogs hear? Explore the amazing world of sound waves, frequency, and how different animals experience sound! Perfect for curious middle schoolers.</p>
@@ -87,7 +87,7 @@
       </article>
 
       <article class="card">
-          <img src="assets/maxJ.jpg" alt="Sawon and Max the German Shepherd exploring nature together" style="width:100%;height:auto;border-radius:12px;border:1px solid var(--border)">
+          <img src="assets/maxJ.jpg" alt="Sawon and Max the German Shepherd exploring nature together">
           <h2>Field Journal: Wandering with Sawon & Max</h2>
         <div class="meta">Sep 12, 2025 · 5 min read · <span class="badge">Nature</span></div>
         <p>Watching my daughter Sawon explore the world alongside Max, our 3.5-year-old German Shepherd, reveals the profound magic that happens when children and dogs connect with nature together.</p>
