Add Einstein quotes section and improve sunset image cropping

--- a/index.html
+++ b/index.html
@@ -48,11 +48,29 @@
     <section class="grid">
       <article class="card">
         <a href="post.html">
-          <img src="assets/placeholder.jpg" alt="placeholder cover">
-          <h2>Blessed to be here</h2>
+          <img src="assets/placeholder.jpg" alt="Beautiful sunset landscape" class="sunset-crop">
+          <h2>Einstein's Wisdom for Daily Life</h2>
         </a>
-        <div class="meta">Sep 28, 2025 · 3 min read · <span class="badge">Reflection</span></div>
-        <p>While walking, pause, look up and around you - experience your presence in this beautiful world of ours, all of us!</p>
+        <div class="meta">Oct 4, 2025 · 4 min read · <span class="badge">Wisdom</span></div>
+        <p>Timeless insights from Albert Einstein that guide us through wonder, curiosity, and the pursuit of understanding in our everyday lives.</p>
+        
+        <div class="einstein-quotes">
+          <blockquote class="featured-einstein">
+            "Try not to become a person of success, but rather try to become a person of value."
+          </blockquote>
+          
+          <div class="daily-wisdom">
+            <div class="wisdom-card">
+              <p><strong>On Learning:</strong> "Once we accept our limits, we go beyond them."</p>
+            </div>
+            <div class="wisdom-card">
+              <p><strong>On Life:</strong> "Life is like riding a bicycle. To keep your balance, you must keep moving."</p>
+            </div>
+            <div class="wisdom-card">
+              <p><strong>On Wonder:</strong> "The most beautiful thing we can experience is the mysterious."</p>
+            </div>
+          </div>
+        </div>
       </article>
 
       <article class="card">
