Remove sound section image, disable archive page, improve Einstein sunset cropping

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="menu">
         <a class="active" href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="archive.html">Archive</a>
+        <a href="#" onclick="return false;" style="opacity: 0.5; cursor: not-allowed;">Archive</a>
         <a href="mailto:hello@ajayzhimire.app">Subscribe</a>
       </nav>
     </div>
@@ -74,7 +74,6 @@
       </article>
 
       <article class="card">
-        <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=800&h=400&fit=crop&crop=center" alt="Sound waves and music">
         <h2>Sound & Frequency — The Basics for Young Scientists</h2>
         <div class="meta">Sep 20, 2025 · 3 min read · <span class="badge">Science</span></div>
         <p>🎵 Why can't we hear what dogs hear? Explore the amazing world of sound waves, frequency, and how different animals experience sound! Perfect for curious middle schoolers.</p>
