Increase Einstein sunset image height to 250px for better vertical view

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             <div class="wisdom-card">
               <p><strong>On Learning:</strong> "Once we accept our limits, we go beyond them."</p>
             </div>
-            <div class="wisdom-card">
+            <!-- <div class="wisdom-card">
               <p><strong>On Life:</strong> "Life is like riding a bicycle. To keep your balance, you must keep moving."</p>
             </div>
             <div class="wisdom-card">
               <p><strong>On Wonder:</strong> "The most beautiful thing we can experience is the mysterious."</p>
-            </div>
+            </div> -->
           </div>
         </div>
       </article>
