Remove Einstein article and add wide sunset photo under Today's Reflection

--- a/index.html
+++ b/index.html
@@ -43,18 +43,11 @@
           <small>Oct 4, 2025 • <a href="https://youtu.be/cRmbwczTC6E" target="_blank" rel="noopener">🎥 Watch: The Power of Curiosity</a></small>
         </div>
       </div>
+      <!-- Wide sunset photo under Today's Reflection -->
+      <img src="assets/placeholder.jpg" alt="Beautiful sunset landscape" class="wide-sunset">
     </section>
 
     <section class="grid">
-      <article class="card">
-        <a href="post.html">
-          <img src="assets/placeholder.jpg" alt="Beautiful sunset landscape" class="sunset-crop">
-          <h2>Einstein's Wisdom for Daily Life</h2>
-        </a>
-        <div class="meta">Oct 4, 2025 · 4 min read · <span class="badge">Wisdom</span></div>
-        <p>Timeless insights from Albert Einstein that guide us through wonder, curiosity, and the pursuit of understanding in our everyday lives.</p>
-      </article>
-
       <article class="card">
         <h2>Sound & Frequency — The Basics for Young Scientists</h2>
         <div class="meta">Sep 20, 2025 · 3 min read · <span class="badge">Science</span></div>
