--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main class="container">
     <section class="hero">
       <span class="kicker">Welcome</span>
-      <h1>Knowledge is the virtue, share and grow.</h1>
+      <h1>Learn, share and grow!</h1>
       <p>Experiments in learning: transforming math lessons with stories rather than numbers, exploring new topics that can be practiced and shared.</p>
     </section>
 
