Current site state with Learn, share and grow hero and wide sunset under reflection

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section class="tribute-section">
       <div class="tribute-header">
         <span class="kicker">Inspiration</span>
-        <h2>Dr. Jane Goodall — A Life of Wonder and Hope</h2>
+        <h2>Dr. Jane Goodall. A Life of Wonder and Hope</h2>
         <p class="tribute-intro">Celebrating the remarkable life, groundbreaking work, and enduring wisdom of a woman who changed how we see ourselves and our relationship with the natural world.</p>
       </div>
       
